
    YARN-3583. Support of NodeLabel object instead of plain String 
    in YarnClient side. (Sunil G via wangda)

    YARN-3684. Changed ContainerExecutor's primary lifecycle methods to use a more
    extensible mechanism of context objects. (Sidharta Seethana via vinodkv)

    YARN-3594. WintuilsProcessStubExecutor.startStreamReader leaks streams.
    (Lars Francke via junping_du)

  OPTIMIZATIONS

    YARN-3339. TestDockerContainerExecutor should pull a single image and not
    the entire centos repository. (Ravindra Kumar Naik via raviprak)

    YARN-3469. ZKRMStateStore: Avoid setting watches that are not required. 
    (Jun Gong via kasha)

    YARN-3006. Improve the error message when attempting manual failover with 
    auto-failover enabled. (Akira AJISAKA via wangda)

  BUG FIXES

    YARN-3197. Confusing log generated by CapacityScheduler. (Varun Saxena 
    via devaraj)

    YARN-3305. Normalize AM resource request on app submission. (Rohith Sharmaks
    via jianhe)

    YARN-3205 FileSystemRMStateStore should disable FileSystem Cache to avoid
    get a Filesystem with an old configuration. (Zhihai Xu via ozawa)

    YARN-3269. Yarn.nodemanager.remote-app-log-dir could not be configured to 
    fully qualified path. (Xuan Gong via junping_du)

    YARN-3241. FairScheduler handles "invalid" queue names inconsistently. 
    (Zhihai Xu via kasha)

    YARN-3383. AdminService should use "warn" instead of "info" to log exception 
    when operation fails. (Li Lu via wangda)

    YARN-3400. [JDK 8] Build Failure due to unreported exceptions in
    RPCUtil (rkanter)

    YARN-3412. RM tests should use MockRM where possible. (kasha)

    YARN-3425. NPE from RMNodeLabelsManager.serviceStop when 
    NodeLabelsManager.serviceInit failed. (Bibin A Chundatt via wangda)

    YARN-3415. Non-AM containers can be counted towards amResourceUsage of a
    Fair Scheduler queue (Zhihai Xu via Sandy Ryza)
